route_tables.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description: Create a route table

Parameters:
  VPCName:
    Description: The name of the VPC being created.
    Type: String
    Default: VPC Public and Private with NAT

Resources:
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Application
          Value: !Ref AWS::StackName
        - Key: Network
          Value: Public
        - Key: Name
          Value: !Join
            - ''
            - - !Ref VPCName
              - '-IGW'

  GatewayToInternet:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !ImportValue VPCId
      InternetGatewayId: !GetAtt InternetGateway.InternetGatewayId

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCId
      Tags:
        - Key: Application
          Value: !Ref AWS::StackName
        - Key: Network
          Value: Public
        - Key: Name
          Value: !Join
            - ""
            - - !Ref VPCName
              - -public-route-table

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: GatewayToInternet
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !ImportValue PublicSubnetId
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCId
      Tags:
        - Key: Name
          Value: !Join
            - ""
            - - !Ref VPCName
              - -private-route-table

  PrivateRouteToInternet:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !ImportValue NATGatewayId

  PrivateSubnetRouteTableAssociation0:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !ImportValue PrivateSubnetId
      RouteTableId: !Ref PrivateRouteTable

Outputs:
  InternetGatewayId:
    Description: Id of Internet Gateway
    Value: !Ref InternetGateway
    Export:
      Name: InternetGatewayId

  GatewayToInternetId:
    Description: Id of Gateway to Internet
    Value: !Ref GatewayToInternet
    Export:
      Name: GatewayToInternetId

  PublicRouteTableId:
    Description: Id of public route table
    Value: !Ref PublicRouteTable
    Export:
      Name: PublicRouteTableId

  PrivateRouteTableId:
    Description: Id of private route table
    Value: !Ref PrivateRouteTable
    Export:
      Name: PrivateRouteTableId
